<resources>
    <string name="app_name">身边</string>
    <string name="loading"></string>
    <string name="main_setting">设置</string>
    <string name="login_name_hint"><font size="13">请输入登录账号</font></string>
    <string name="login_pass_hint"><font size="13">请输入登录密码</font></string>
    <string name="exit_warn">再按一次返回退出身边</string>
    <string name="coach_personal_member">私教会员</string>
    <string name="no_data">无相关信息</string>
    <string name="receive">接待</string>
    <string name="receive_hint">请选择接待人</string>
    <string name="name">姓名</string>
    <string name="name_hint"><font size='14'>请填写顾客姓名</font></string>
    <string name="user_phone_hint"><font size='14'>请填写顾客电话</font></string>
    <string name="coach_receive_hint"><font size='14'>请填写跟进状态</font></string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phone">电话</string>
    <string name="type">类型</string>
    <string name="source">来源</string>
    <string name="required_tag">*</string>
    <string name="coach_customer">我的顾客</string>
    <string name="comments">备注</string>
    <string name="fomat_ignore_year_month_day_week">HH:mm</string>
    <string name="format_buy_card_date">MM月dd日</string>
    <string name="format_year_month_day">yyyy年MM月dd日</string>
    <string name="format_year_month_day_1">yyyy-MM-dd</string>
    <string name="format_no_sec">yyyy-MM-dd HH:mm</string>
    <string name="format_ignore_year_month_hour">MM月dd日</string>
    <string name="order_no_order_code">正在处理中...</string>
    <string name="order_no_care_desc">无</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="receive_record">跟进记录</string>
    <string name="upload_photo">体测报告照片</string>
    <string name="upload_exam_record">体测报告详情</string>
    <string name="record_name_hint"><font size="14">请填写姓名</font></string>
    <string name="record_age_hint"><font size="14">请填写正确年龄</font></string>
    <string name="record_height_hint"><font size="14">请填写身高</font></string>
    <string name="record_weight_hint"><font size="14">请填写体重</font></string>
    <string name="record_skeleton_hint"><font size="14">请填写骨骼肌重</font></string>
    <string name="rest_money">%1$s元</string>
    <string name="getting_tip">...</string>
    <string name="fans_tip">粉丝</string>
    <string name="default_fans_num">--</string>
    <string name="continue_purchase_wait">正在获取账户信息，请稍候...</string>
    <string name="my_collection">关注</string>
    <string name="default_collection_num">--</string>
    <string name="add_collection_succ">关注成功</string>
    <string name="add_collection_failed">关注失败，网络异常</string>
    <string name="wx_friends">微信好友</string>
    <string name="wx_zone">朋友圈</string>
    <string name="btn_login">登录</string>
    <string name="xxoneside_gongzhonghao">小熊快跑</string>
    <string name="text_coupons">优惠券</string>
    <string name="logout_succ">成功退出账号！</string>
    <string name="balance_title">余额</string>
    <string name="order_cancel_cancelled">否</string>
    <string name="share_to_qq">QQ</string>
    <string name="share_to_weibo">微博</string>
    <string name="send_done">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="send_canceled">发送取消</string>
    <string name="share_dialog_title">分享红包到：</string>
    <string name="share_dialog_title_2">分享到：</string>
    <string name="classinfo_update_city_btn_1">升级</string>
    <string name="weibosdk_demo_app_url">https://github.com/mobileresearch/weibo_android_sdk/blob/master/WeiboSDKDemo.apk</string>
    <string name="weibosdk_demo_share_text_template">我正在使用微博客户端发博器分享文字</string>
    <string name="weibosdk_demo_share_webpage_template">【%1$s】（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_webpage_demo">XXX 新闻</string>
    <string name="tab_user_viewpager_today_title">今日健身</string>
    <string name="tab_user_viewpager_today_time">持续时间</string>
    <string name="tab_user_viewpager_today_sign">本月签到</string>
    <string name="tab_user_viewpager_dialog_title_common">我在小熊快跑</string>
    <string name="tab_user_viewpager_dialog_share_failed">分享出问题了：图片截取失败！</string>
    <string name="tab_user_viewpager_history_unit">次</string>
    <string name="tab_user_viewpager_history_sign">总签到数</string>
    <string name="tab_user_history_fit_time_title">健身时间</string>
    <string name="time_tip">时间</string>
    <string name="gym_choose_date_all">全天</string>
    <string name="gym_choose_date_shangwu">上午(09:00-12:00)</string>
    <string name="gym_choose_date_zhongwu">中午(12:00-14:00)</string>
    <string name="gym_choose_date_xiawu">下午(14:00-18:00)</string>
    <string name="gym_choose_date_wanshang">晚上(18:00-22:00)</string>
    <string name="business_zone">商圈</string>
    <string name="traning_class">分类</string>
    <string name="user_feedback">用户反馈</string>
    <string name="send">发送</string>
    <string name="hint_loading">"努力加载中&#8230;"</string>
    <string name="xlistview_header_hint_loading">" 努力刷新中&#8230;"</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="fomat_tab2_date_with_week2">MM.dd EEEE</string>
    <string name="fomat_tab2_date_with_week3">MM-dd EEEE</string>
    <string name="fomat_tab2_week">EEEE</string>
    <string name="fomat_tab2_date">MM.dd</string>
    <string name="fomat_tab2_date2">MM-dd</string>
    <string name="no_remaining">约满</string>
    <string name="already_book">已预约</string>
    <string name="not_bookable">预约结束</string>
    <string name="not_support_before_today">昨日课程已过期&#8230;</string>
    <string name="not_support_7_after_today">7天后的课程尚未开始&#8230;</string>
    <string name="today">今天</string>
    <string name="default_city">北京</string>
    <string name="city_name_beijing_1">Beijing</string>
    <string name="city_name_beijing_2">Bei jing</string>
    <string name="city_name_beijing_3">BeiJing</string>
    <string name="city_name_beijing_4">Bei Jing</string>
    <string name="city_name_beijing_5">beijing</string>
    <string name="city_name_beijing_6">bei jing</string>
    <string name="city_name_beijing_7">beiJing</string>
    <string name="city_name_beijing_8">bei Jing</string>
    <string name="city_shanghai">上海</string>
    <string name="city_name_shanghai_1">Shanghai</string>
    <string name="city_name_shanghai_2">Shang hai</string>
    <string name="city_name_shanghai_3">ShangHai</string>
    <string name="city_name_shanghai_4">Shang Hai</string>
    <string name="city_name_shanghai_5">shanghai</string>
    <string name="city_name_shanghai_6">shang hai</string>
    <string name="city_name_shanghai_7">shangHai</string>
    <string name="city_name_shanghai_8">shang Hai</string>
    <string name="city_shenzhen">深圳</string>
    <string name="city_name_shenzhen_1">Shenzhen</string>
    <string name="city_name_shenzhen_2">Shen zhen</string>
    <string name="city_name_shenzhen_3">ShenZhen</string>
    <string name="city_name_shenzhen_4">Shen Zhen</string>
    <string name="city_name_shenzhen_5">shenzhen</string>
    <string name="city_name_shenzhen_6">shen zhen</string>
    <string name="city_name_shenzhen_7">shenZhen</string>
    <string name="city_name_shenzhen_8">shen Zhen</string>
    <string name="city_guangzhou">广州</string>
    <string name="city_name_guangzhou_1">Guangzhou</string>
    <string name="city_name_guangzhou_2">Guang zhou</string>
    <string name="city_name_guangzhou_3">GuangZhou</string>
    <string name="city_name_guangzhou_4">Guang Zhou</string>
    <string name="city_name_guangzhou_5">guangzhou</string>
    <string name="city_name_guangzhou_6">guang zhou</string>
    <string name="city_name_guangzhou_7">guangZhou</string>
    <string name="city_name_guangzhou_8">guang Zhou</string>
    <string name="city_nanjing">南京</string>
    <string name="city_name_nanjing_1">Nanjing</string>
    <string name="city_name_nanjing_2">Nan jing</string>
    <string name="city_name_nanjing_3">NanJing</string>
    <string name="city_name_nanjing_4">Nan Jing</string>
    <string name="city_name_nanjing_5">nanjing</string>
    <string name="city_name_nanjing_6">nan jing</string>
    <string name="city_name_nanjing_7">nanJing</string>
    <string name="city_name_nanjing_8">nan Jing</string>
    <string name="city_chengdu">成都</string>
    <string name="city_name_chengdu_1">Chengdu</string>
    <string name="city_name_chengdu_2">Cheng du</string>
    <string name="city_name_chengdu_3">ChengDu</string>
    <string name="city_name_chengdu_4">Cheng Du</string>
    <string name="city_name_chengdu_5">chengdu</string>
    <string name="city_name_chengdu_6">cheng du</string>
    <string name="city_name_chengdu_7">chengDu</string>
    <string name="city_name_chengdu_8">cheng Du</string>
    <string name="city_xian">西安</string>
    <string name="city_name_xian_1">Xian</string>
    <string name="city_name_xian_2">Xi an</string>
    <string name="city_name_xian_3">XiAn</string>
    <string name="city_name_xian_4">Xi An</string>
    <string name="city_name_xian_5">xian</string>
    <string name="city_name_xian_6">xi an</string>
    <string name="city_name_xian_7">xiAn</string>
    <string name="city_name_xian_8">xi An</string>
    <string name="city_wuhan">武汉</string>
    <string name="city_name_wuhan_1">Wuhan</string>
    <string name="city_name_wuhan_2">Wu han</string>
    <string name="city_name_wuhan_3">WuHan</string>
    <string name="city_name_wuhan_4">Wu Han</string>
    <string name="city_name_wuhan_5">wuhan</string>
    <string name="city_name_wuhan_6">wu han</string>
    <string name="city_name_wuhan_7">wuHan</string>
    <string name="city_name_wuhan_8">wu Han</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="confirm">获取验证码</string>
    <string name="input_confirmation_code">请输入收到的验证码</string>
    <string name="confirm_login">验证身份</string>
    <string name="warnning_register">注册代表你已阅读并同意</string>
    <string name="get_verify_agin">若未收到验证码，请于60s后重新获取</string>
    <string name="coupon_help_title_1">1、什么是优惠码?</string>
    <string name="coupon_help_title_2">2、什么是代金券?</string>
    <string name="coupon_help_title_3">3、如何获取代金券?</string>
    <string name="coupon_help_title_4">4、如何使用代金券?</string>
    <string name="coupon_help_title_5">5、代金券找零兑现吗?</string>
    <string name="coupon_help_1">优惠码是小熊快跑发行和认可并可定向兑换成代金券。</string>
    <string name="coupon_help_2">代金券是小熊快跑发行和认可的购买折扣券，可以在购买小熊快跑服务付款时抵扣相应面值的金额。</string>
    <string name="coupon_help_3">小熊快跑客户端和微信服务号会不定期推出秒杀活动，手机用户及时留意和关注有关活动通知，机会不容错过!</string>
    <string name="coupon_help_4">在手机客户端和微信服务号上付款时，都可以选择使用符合条件代金券，即可抵扣相应的金额。</string>
    <string name="coupon_help_5">代金券不找零，不兑换。付款时系统会自动匹配最高优惠金额的代金券，用户可自行选择。</string>
    <string name="coupon_suggestion_tip">小熊快跑客服电话 : 400-8818-255</string>
    <string name="circle_share">分享</string>
    <string name="circle_delete">删除</string>
    <string name="circle_cancel">取消</string>
    <string name="merhcant_time_reopen_door_dlg_title">还没进店</string>
    <string name="merchant_time_reopen_door_dlg_msg">我还没有进入健身房内\n需要重新进入</string>
    <string name="merchnat_time_reopen_door_btn_text">重新进店</string>
    <string name="item_course_time_title">课程时间</string>
    <string name="item_course_time_default_desc">请选择课程时间</string>
    <string name="item_course_member_title">上课会员</string>
    <string name="item_course_member_default_desc">请选择上课会员</string>
    <string name="item_course_type_title">课程名称</string>
    <string name="item_course_type_default_desc">请选择课程名称</string>
    <string name="add_course_commit_btn_title">提  交</string>
    <string name="training_part_pectoralis">胸大肌</string>
    <string name="training_part_back">背</string>
    <string name="training_part_arm">手臂</string>
    <string name="training_part_deltoid">三角肌</string>
    <string name="training_part_abdominal">腹肌</string>
    <string name="training_part_leg">腿</string>
    <string name="training_part_hip">臀</string>
</resources>