<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_background_gray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ui_circle_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_tv_height"
        android:background="@drawable/item_white_to_alpha"
        android:gravity="center"
        android:text="@string/circle_share"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray" />

    <TextView
        android:id="@+id/ui_circle_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_tv_height"
        android:background="@drawable/item_white_to_alpha"
        android:gravity="center"
        android:text="@string/circle_delete"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/ui_circle_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_tv_height"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_white_to_alpha"
        android:gravity="center"
        android:text="@string/circle_cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>